# DelphiOracle

./: .gitignore  Cargo (2).toml  Cargo (4).toml  Cargo (5).toml  Cargo.toml  Pricing.html  README.md  Welcome.html  authority-request.json  autonomy.rs  docker-compose.yml  gateway.rs  gravity-request.json  index.html  middleware.ts  package-lock.json  package.json  policy-request.json  policy.rs  tailwind.config.ts
chats/: chat1.md
crates/common/src/: authority.rs  autonomy.rs  gateway.rs  gravity.rs  lib.rs  policy.rs
examples/: authority-request.json  policy-request.json
project/: Delphi.html  How-Delphi-Works.html  Pricing.html  Welcome.html
services/authority-svc/: Cargo.toml
services/authority-svc/src/: main.rs
services/autonomy-svc/: Cargo.toml
services/autonomy-svc/src/: main.rs
services/gateway-svc/: Cargo.toml
services/gateway-svc/src/: main.rs
services/gravity-svc/: Cargo.toml
services/gravity-svc/src/: main.rs
services/policy-svc/: Cargo.toml
services/policy-svc/src/: main.rs
src/app/: layout.tsx
src/app/(platform)/: layout.tsx
src/components/command-center/: index.tsx
src/components/decision-log/: index.tsx
src/components/decision-theater/: index.tsx
src/components/governance/: index.tsx
src/components/intelligence/: index.tsx
src/components/layout/: sidebar.tsx  topbar.tsx
src/components/mission-control/: index.tsx
src/components/ui/: index.tsx
src/components/wizard/: index.tsx
src/lib/: constants.ts  engine.ts  types.ts
src/styles/: globals.css
supabase/migrations/: 001_initial.sql
(+12 files in other folders)
