[workspace]
members = [
  "crates/common",
  "services/policy-svc",
  "services/gravity-svc",
  "services/authority-svc",
  "services/autonomy-svc",
  "services/gateway-svc"
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
common = { path = "crates/common" }
